testdata/golden/sema/invalid/concurrency/nonblocking_calls_lock.fmt
// Invalid: @nonblocking function calls blocking method
@nonblocking
pub fn bad_lock(mtx: &mut Mutex) -> nothing {
    mtx.lock();  // ERROR: @nonblocking calls blocking method
}
